--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -4,9 +4,9 @@
     margin: 0 auto;
 }
 .img{
-    width: 50%;
-    /* float: left; */
-    position: absolute;
+    width: 80px;
+    height: 80px;
+    margin-left: 30%;
 }
 
 .rightcard{
