--- a/src/containers/Navbar/Navbar.css
+++ b/src/containers/Navbar/Navbar.css
@@ -5,9 +5,8 @@
 }
 
 .li{
+    float: left;
     color: white;
-    display: inline-block;
-    padding-right: 22px;
     font-size: 16px;
     font-weight: 600;
     line-height: 14px;
